--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -222,6 +222,9 @@ h6 {
 .mobile-nav-active #header {
   left: 0;
 }
+h2{
+  text-align: center;
+}
 
 /*--------------------------------------------------------------
 # Hero Section
@@ -229,7 +232,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top center;
+  background: url("../img/dev.jpg") top center;
   background-size: cover;
 }
 
